# ghostfold

./: .gitignore  AGENTS.md  CLAUDE.md  GhostFold.ipynb  MIGRATION.md  README.md  RELEASING.md  WORKPLAN.md  bench_results.csv  calculate_neff.py  config.yaml  ghostfold.sh  install_localcolabfold.sh  mask_msa.py  pseudomsa.py  pyproject.toml  query.fasta  test_msa.a3m
.github/workflows/: ci.yml  pytest.yaml  python-publish.yaml  release.yml
benchmark/raw_input/: queries.fasta
benchmark/results/: results.csv
benchmark/results/1LQ7_A/3di_perturb/msa/1LQ7_A/: pstMSA.a3m
benchmark/results/1LQ7_A/diverse_beam/msa/1LQ7_A/: pstMSA.a3m
benchmark/results/1LQ7_A/encoder_perturb/msa/1LQ7_A/: pstMSA.a3m
benchmark/results/1LQ7_A/round_trip/msa/1LQ7_A/: pstMSA.a3m
benchmark/results/1QYS_A/3di_perturb/msa/1QYS_A/: pstMSA.a3m
benchmark/results/1QYS_A/diverse_beam/msa/1QYS_A/: pstMSA.a3m
benchmark/results/1QYS_A/encoder_perturb/msa/1QYS_A/: pstMSA.a3m
benchmark/results/1QYS_A/round_trip/msa/1QYS_A/: pstMSA.a3m
benchmark/results/2JUA_A/3di_perturb/msa/2JUA_A/: pstMSA.a3m
benchmark/results/2JUA_A/diverse_beam/msa/2JUA_A/: pstMSA.a3m
benchmark/results/2JUA_A/encoder_perturb/msa/2JUA_A/: pstMSA.a3m
benchmark/results/2JUA_A/round_trip/msa/2JUA_A/: pstMSA.a3m
benchmarks/: bench_inference.py  bench_pseudomsa.py  bench_pseudomsa_low_neff.py
benchmarks/Orphan25/fasta/: 6LF2_B.fasta  6LH8_A.fasta  6MRQ_I.fasta  6PW6_I.fasta  6VH8_A.fasta  6VRB_C.fasta  6WKY_d.fasta  6WL0_h.fasta  6XA1_Ln.fasta  6XN9_A.fasta  6XYH_A.fasta  6XYI_A.fasta  6ZJ3_L6.fasta  6ZJ3_L7.fasta  6ZJ3_Lo.fasta  7AD7_C.fasta  7AL0_A.fasta  7COY_bI.fasta  7LOK_I.fasta  7M3U_A.fasta  7MIZ_18.fasta  7N50_A.fasta
docs/superpowers/plans/: 2026-04-15-t5-inference-improvements.md  2026-04-23-install-streamline.md  2026-04-24-low-neff-pseudomsa.md  2026-04-30-multimer-msa-pairing.md
docs/superpowers/specs/: 2026-04-15-t5-inference-design.md  2026-04-23-install-streamline-design.md  2026-04-24-low-neff-pseudomsa-design.md  2026-04-30-multimer-msa-pairing-design.md
pseudomsa/mutator/: mutator.py
pseudomsa/utils/: coevolution.py  filters.py  generation.py  io.py  model.py  plotting.py
results/: log.txt
scripts/: install_localcolabfold.sh
src/ghostfold/: __init__.py  api.py  cli.py  config.py  entrypoints.py  errors.py  masking.py  msa_core.py  neff.py  results.py
src/ghostfold/benchmark/: colabfold_parser.py  low_neff.py  runner.py  structure_metrics.py
src/ghostfold/cli/: app.py  fold.py  install_colabfold.py  mask.py  msa.py  neff.py  run.py  setup.py  subsample.py
src/ghostfold/core/: colabfold.py  colabfold_env.py  colabfold_install.py  config.py  gpu.py  logging.py  pipeline.py  postprocess.py  setup.py
src/ghostfold/data/: default_config.yaml
src/ghostfold/io/: fasta.py
src/ghostfold/msa/: filters.py  generation.py  mask.py  model.py  neff.py  pairing.py  ranking.py
src/ghostfold/msa/strategies/: __init__.py  base.py  baseline.py  cnn_3di_predict.py  cnn_aa_predict.py  diverse_beam.py  embedding_walk_encoder.py  embedding_walk_full.py  encoder_only_3di_sub.py  encoder_perturb.py  round_trip.py  single_sequence.py  temperature_sweep.py  threedipperturb.py
src/ghostfold/mutator/: __init__.py  mutator.py
src/ghostfold/services/: __init__.py  common.py  masking.py  msa.py  neff.py  pipeline.py
src/ghostfold/viz/: coevolution.py  msa_coverage.py  plotting.py
src/pseudomsa/mutator/: mutator.py
src/pseudomsa/utils/: filters.py  generation.py  msa_coverage.py  plotting.py
test_out/: config.json  log.txt  test_msa.a3m  test_msa_predicted_aligned_error_v1.json  test_msa_scores_rank_001_alphafold2_ptm_model_1_seed_000.json
tests/: conftest.py  test_benchmark_parser.py  test_benchmark_runner.py  test_cli.py  test_coevolution_solve.py  test_colabfold_env.py  test_colabfold_install.py  test_colabfold_preflight_cli.py  test_colabfold_timeout.py  test_compatibility_commands.py  test_config.py  test_filters.py  test_filters_vectorized.py  test_generation_fixes.py  test_inference_precision.py  test_io.py  test_low_neff_benchmark.py  test_mask.py  test_masking.py  test_model_loading.py  test_model_sampling.py  test_multimer.py  test_neff.py  test_neff_vectorized.py  test_packaging_failure_modes.py  test_packaging_smoke.py  test_pairing.py  test_pipeline_fixes.py  test_pipeline_integration.py  test_pipeline_validation.py  test_postprocess.py  test_ranking.py  test_setup.py  test_strategies.py
tests/fixtures/: test.fasta
(+12 files in other folders)
