[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostfold"
dynamic = ["version"]
description = "Accurate, database-free protein folding from single sequences using structure-aware synthetic MSAs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
dependencies = [
    "biopython>=1.80",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "PyYAML>=6.0",
    "rich>=13.0",
    "scikit-learn>=1.0",
    "protobuf>=4.0",
    "sentencepiece>=0.1.96",
    "tiktoken>=0.5",
    "torch>=2.0",
    "transformers>=4.30",
    "typer>=0.12",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
quant = ["bitsandbytes>=0.41.0"]
bench = ["biotite>=0.36"]

[project.scripts]
ghostfold = "ghostfold.cli.app:app"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = ["slow: marks tests as slow integration tests requiring GPU/model downloads (deselect with '-m \"not slow\"')"]

[tool.hatch.version]
path = "src/ghostfold/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ghostfold"]
